2005-06-20 Braden McDaniel  <braden@endoframe.com>

	Added openvrml::browser_event, openvrml::browser_listener.
	openvrml::browser now emits an openvrml::browser_event when
	the world is initialized and shut down.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2005-06-19 Braden McDaniel  <braden@endoframe.com>

	openvrml::vrml97_node::anchor_node doesn't need to override
	openvrml::bounded_volume_node::do_bounding_volume.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-06-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Added virtual
	destructor to image_stream_listener::image_reader.

2005-06-10 Braden McDaniel  <braden@endoframe.com>

	Fixes for gcc warnings.

	* mozilla-plugin/src/openvrml.cpp
	* mozilla-plugin/src/openvrml-player/player.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-06-07 Braden McDaniel  <braden@endoframe.com>

	Fixes for gcc warnings.

	* mozilla-plugin/src/openvrml.cpp
	* mozilla-plugin/src/openvrml-player/player.cpp
	* src/libopenvrml/openvrml/ScriptJDK.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-05-31 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(stream_reader::operator()):  Break out of the inner loop if eof
	is encountered.

2005-05-30 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp:  Abort the forked process if
	openvrml-player cannot be started.

2005-05-28 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp:  Removed unnecessary
	#includes.

2005-05-28 Braden McDaniel  <braden@endoframe.com>
