@@ -1,3 +1,12 @@
+Changes new in version 0.15.8, 5 June, 2005
+===========================================
+
+- Really fixed --disable-mozilla-plugin configure option.
+
+- Fixed rendering of Background nodes (so that the background no longer
+  moves).
+
+
 Changes new in version 0.15.7, 20 April, 2005
 =============================================
 
